// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth form Should render signin form 1`] = `
<div
  className="auth-modal"
>
  <div
    className="auth-form-container"
  >
    <div
      className="close"
    >
      X
    </div>
    <h2
      className="auth-form--title"
    />
    <form
      className="auth-form"
      onSubmit={[Function]}
    >
      <input
        className="auth-form--input"
        name="login"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
      <input
        className="auth-form--input"
        name="password"
        required={true}
        type="password"
      />
      <input
        className="auth-form_submit"
        type="submit"
      />
    </form>
  </div>
</div>
`;

exports[`Auth form Should render signup form 1`] = `
<div
  className="auth-modal"
>
  <div
    className="auth-form-container"
  >
    <div
      className="close"
    >
      X
    </div>
    <h2
      className="auth-form--title"
    />
    <form
      className="auth-form"
      onSubmit={[Function]}
    >
      <input
        className="auth-form--input"
        name="login"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
      <input
        className="auth-form--input"
        name="password"
        required={true}
        type="password"
      />
      <label
        className="add-avatar-btn auth-form--input_file"
        style={
          Object {
            "backgroundImage": "url(https://www.pinclipart.com/picdir/big/15-154296_gender-neutral-user-account-icon-png-clipart.png)",
          }
        }
      >
        <input
          accept="image/*"
          name="avatar"
          onChange={[Function]}
          type="file"
        />
      </label>
      <input
        className="auth-form_submit"
        type="submit"
      />
    </form>
  </div>
</div>
`;
